# mongrel

./: Cargo.toml  LICENSE  README.md  TASKS.md
docs/: 00-index.md  01-schema.md  02-model-crud.md  03-query-builder.md  04-population.md  05-aggregation.md  06-pagination.md  07-indexes.md  08-hooks-middleware.md
mongrel/: Cargo.toml  README.md
mongrel-macros/: Cargo.toml  README.md
mongrel-macros/src/: lib.rs
mongrel/examples/: basic.rs
mongrel/src/: aggregation.rs  connection.rs  error.rs  hooks.rs  index.rs  lib.rs  middleware.rs  model.rs  pagination.rs  populate.rs  query.rs  schema.rs  virtual_fields.rs
mongrel/tests/: integration.rs
