[package]
name = "mongrel-macros"
version = "0.1.1"
edition = "2024"
description = "Proc-macro crate for Mongrel — derive macros for Schema and Model"
license = "MIT"
repository = "https://github.com/Arome8240/mongrel"
keywords = ["mongodb", "orm", "odm", "async", "derive"]
categories = ["database", "asynchronous"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
darling = "0.20"
