[package]
name = "mongrel"
version = "0.1.0"
edition = "2024"

[dependencies]
mongrel-macros = { path = "../mongrel-macros" }
mongodb = { version = "3" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bson = { version = "2", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1"
validator = { version = "0.18", features = ["derive"] }
once_cell = "1"
futures-util = "0.3"
serde_json = "1"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["mongo"] }
tokio = { version = "1", features = ["full"] }
