[package]
name = "mongrel"
version = "0.1.1"
edition = "2024"
description = "A Mongoose-style MongoDB ODM for Rust — schemas, CRUD, hooks, population, aggregation, pagination, and more"
license = "MIT"
repository = "https://github.com/Arome8240/mongrel"
keywords = ["mongodb", "orm", "odm", "mongoose", "async"]
categories = ["database", "asynchronous"]
readme = "README.md"

[dependencies]
mongrel-macros = { version = "0.1.1", path = "../mongrel-macros" }
mongodb = { version = "3" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bson = { version = "2", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1"
validator = { version = "0.18", features = ["derive"] }
once_cell = "1"
futures-util = "0.3"
serde_json = "1"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["mongo"] }
tokio = { version = "1", features = ["full"] }
